--- a/index.html
+++ b/index.html
@@ -4,11 +4,7 @@
   <meta charset="UTF-8">
   <title>Vastbitloud</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-  <!-- Redireciona automaticamente para a página de login -->
   <meta http-equiv="refresh" content="0; url=login.html">
 </head>
-<body style="background:#021633; color:white; display:flex; justify-content:center; align-items:center; height:100vh; font-family:Arial;">
-  <h2>Redirecionando...</h2>
-</body>
+<body></body>
 </html>
