--- a/login.html
+++ b/login.html
@@ -1,24 +1,21 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Login - Vastbitloud</title>
-<link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <title>Login — Vastbitloud</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-<div class="background"></div>
+<div class="container">
+    <h2>Entrar</h2>
 
-<div class="card">
-  <h2>Entrar</h2>
+    <input id="phone" type="text" placeholder="Telefone">
+    <input id="pass" type="password" placeholder="Senha">
 
-  <input type="text" id="username" placeholder="Nome de usuário">
-  <input type="password" id="password" placeholder="Senha">
+    <button onclick="login()">Entrar</button>
 
-  <button onclick="login()">Acessar</button>
-
-  <p id="msg"></p>
+    <a class="link" href="register.html">Criar conta</a>
 </div>
 
 <script src="script.js"></script>
