--- a/equipe.html
+++ b/equipe.html
@@ -70,7 +70,7 @@ document.getElementById('btnCopiar').addEventListener('click', ()=>{
   setTimeout(()=>msg.style.opacity=0,1600);
 });
 
-// Valores simulados para exibição (pode atualizar conforme lógica real)
+// Valores simulados para exibição (podem atualizar conforme lógica real)
 document.getElementById('bonus').textContent = 'R$150.00';
 document.getElementById('invest').textContent = 'R$500.00';
 document.getElementById('ativosCampo').textContent = '12';
