--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@ document.getElementById('btnRegister').addEventListener('click', ()=>{
   const invitedBy=document.getElementById('inviteCodeReg').value.trim() || null;
   if(!user||!phone||!pass){ showMessage('Preencha todos os campos!'); return; }
 
-  // criar objeto do usuário
+  // criar objeto do usuário. OBS: guarda apenas 1 usuário localmente.
   const myCode = "VAST-"+Date.now().toString(36).toUpperCase();
   const data={ user, phone, pass, myCode, invitedBy };
   localStorage.setItem('vast_userdata', JSON.stringify(data));
@@ -104,10 +104,8 @@ document.getElementById('btnLogin').addEventListener('click', ()=>{
     const choice = document.getElementById('loginChoice').value;
     setTimeout(()=>{
       if(choice === 'site'){
-        // Redireciona para Vastbitloud
-        window.location.href = 'https://sites.google.com/view/vastbitloud?codigo=' + data.myCode;
+        window.location.href = 'https://sites.google.com/view/vastbitloud';
       } else {
-        // Redireciona para equipe.html com código
         window.location.href = 'equipe.html?codigo=' + data.myCode;
       }
     },700);
