--- a/equipe.html
+++ b/equipe.html
@@ -22,20 +22,24 @@ button{width:100%;padding:12px;border-radius:8px;border:none;background:#4da3ff;
 </div>
 
 <div class="container">
+
   <div class="card">
-    <h3 id="bonus" style="color:#4da3ff;margin:0">R$0.00</h3>
+    <h3 id="bonus" style="color:#4da3ff;margin:0">-</h3>
     <div style="color:#b3b3b3">BÔNUS</div>
   </div>
+
   <div class="card">
-    <h3 id="invest" style="color:#4da3ff;margin:0">R$0.00</h3>
+    <h3 id="invest" style="color:#4da3ff;margin:0">-</h3>
     <div style="color:#b3b3b3">INVESTIDO</div>
   </div>
+
   <div class="card">
-    <h3 id="ativosCampo" style="color:#4da3ff;margin:0">0</h3>
+    <h3 id="ativosCampo" style="color:#4da3ff;margin:0">-</h3>
     <div style="color:#b3b3b3">ATIVOS</div>
   </div>
+
   <div class="card">
-    <h3 id="membroCampo" style="color:#4da3ff;margin:0">0</h3>
+    <h3 id="membroCampo" style="color:#4da3ff;margin:0">-</h3>
     <div style="color:#b3b3b3">CONVIDADOS</div>
   </div>
 
@@ -45,37 +49,27 @@ button{width:100%;padding:12px;border-radius:8px;border:none;background:#4da3ff;
     <button id="btnCopiar">Copiar Código</button>
     <div id="msgCopiado">Código copiado!</div>
   </div>
+
 </div>
 
 <script>
-// Verifica se o usuário está logado
 const userData = JSON.parse(localStorage.getItem('vast_userdata')||'null');
 if(!userData){ window.location.href='index.html'; throw ''; }
 
-// Pega código do usuário ou da URL
-const params = new URLSearchParams(window.location.search);
-const codigoURL = params.get('codigo');
-const codigo = codigoURL || userData.myCode;
+const codigo = userData.myCode;
 
-// Preenche input com o link de convite completo
-document.getElementById('linkFinal').value = location.origin + location.pathname.replace(/equipe\.html$/,'') + '?codigo=' + codigo;
+document.getElementById('linkFinal').value =
+  location.origin + location.pathname.replace(/index\.html$/,'').replace(/equipe\.html$/,'') +
+  '?codigo=' + codigo;
 
-// Copiar código
 document.getElementById('btnCopiar').addEventListener('click', ()=>{
-  const campo = document.getElementById('linkFinal');
+  const campo=document.getElementById('linkFinal');
   campo.select();
   document.execCommand('copy');
-  const msg = document.getElementById('msgCopiado');
-  msg.style.opacity = 1;
+  const msg=document.getElementById('msgCopiado');
+  msg.style.opacity=1;
   setTimeout(()=>msg.style.opacity=0,1600);
 });
-
-// Valores simulados para exibição (podem atualizar conforme lógica real)
-document.getElementById('bonus').textContent = 'R$150.00';
-document.getElementById('invest').textContent = 'R$500.00';
-document.getElementById('ativosCampo').textContent = '12';
-document.getElementById('membroCampo').textContent = '8';
 </script>
-
 </body>
 </html>
