--- a/index.html
+++ b/index.html
@@ -5,102 +5,127 @@
 <meta name="viewport" content="width=device-width,initial-scale=1"/>
 <title>Vastbitloud - Login / Cadastro</title>
 <style>
-body{margin:0;padding:0;height:100%;font-family:Arial;background:#0b0f17;color:#fff;display:flex;align-items:center;justify-content:center}
+body{margin:0;padding:0;height:100%;font-family:Arial,Helvetica,sans-serif;background:#0b0f17;color:#fff;display:flex;align-items:center;justify-content:center}
 .card{background:#111722;padding:28px;width:100%;max-width:380px;border-radius:12px;box-shadow:0 8px 30px rgba(0,0,0,.45)}
-input{width:100%;padding:12px;margin:10px 0;border-radius:6px;border:none;background:#1a2333;color:#fff}
+input, select{width:100%;padding:12px;margin:10px 0;border-radius:6px;border:none;background:#1a2333;color:#fff;box-sizing:border-box}
 button{width:100%;padding:12px;border-radius:6px;border:none;background:#4da3ff;color:#000;font-weight:700;cursor:pointer}
-a{color:#66aaff;display:block;margin-top:10px;cursor:pointer}
+a{color:#66aaff;display:block;margin-top:10px;cursor:pointer;text-decoration:none}
 .hidden{display:none}
+small{color:#9aa3b2}
 </style>
 </head>
 <body>
-
 <!-- LOGIN -->
-<div id="loginBox" class="card">
-  <h2>Entrar</h2>
-  <input id="phoneLogin" type="tel" placeholder="Telefone">
+<div id="loginBox" class="card" aria-live="polite">
+  <h2 style="margin:0 0 8px">Entrar</h2>
+  <input id="phoneLogin" type="tel" inputmode="tel" placeholder="Telefone (apenas números)">
   <input id="passLogin" type="password" placeholder="Senha">
-  <button id="btnLogin">Entrar</button>
+  <select id="loginChoice" aria-label="Destino após login">
+    <option value="site">Ir para Vastbitloud</option>
+    <option value="codigo">Usar meu código de convite</option>
+  </select>
+  <button id="btnLogin" type="button">Entrar</button>
   <a id="linkShowRegister">Criar conta</a>
+  <div style="margin-top:8px"><small>Use seu telefone e senha cadastrados.</small></div>
 </div>
 
 <!-- CADASTRO -->
-<div id="registerBox" class="card hidden">
-  <h2>Criar Conta</h2>
+<div id="registerBox" class="card hidden" aria-live="polite">
+  <h2 style="margin:0 0 8px">Criar Conta</h2>
   <input id="userReg" type="text" placeholder="Nome de Usuário">
-  <input id="phoneReg" type="tel" placeholder="Telefone">
+  <input id="phoneReg" type="tel" inputmode="tel" placeholder="Telefone (apenas números)">
   <input id="passReg" type="password" placeholder="Senha">
   <input id="inviteCodeReg" type="text" placeholder="Código de Convite (opcional)">
-  <button id="btnRegister">Cadastrar</button>
+  <button id="btnRegister" type="button">Cadastrar</button>
   <a id="linkShowLogin">Já tenho conta</a>
 </div>
 
 <script>
+// Mensagem temporária
 function showMessage(msg, ok=false){
   const d=document.createElement('div');
   d.textContent=msg;
-  d.style.position='fixed';
-  d.style.top='18px';
-  d.style.left='50%';
-  d.style.transform='translateX(-50%)';
-  d.style.padding='10px 14px';
-  d.style.background= ok? '#4CAF50' : '#ff4d4d';
-  d.style.color='#fff';
-  d.style.borderRadius='8px';
-  d.style.zIndex=9999;
+  d.setAttribute('role','status');
+  Object.assign(d.style,{
+    position:'fixed',top:'18px',left:'50%',transform:'translateX(-50%)',
+    padding:'10px 14px',background: ok? '#4CAF50' : '#ff4d4d',
+    color:'#fff',borderRadius:'8px',zIndex:9999,fontFamily:'Arial'
+  });
   document.body.appendChild(d);
   setTimeout(()=>d.remove(),2200);
 }
 
-const loginBox=document.getElementById('loginBox');
-const registerBox=document.getElementById('registerBox');
-document.getElementById('linkShowRegister').addEventListener('click', ()=>{ 
-  loginBox.classList.add('hidden'); 
-  registerBox.classList.remove('hidden'); 
-});
-document.getElementById('linkShowLogin').addEventListener('click', ()=>{ 
-  registerBox.classList.add('hidden'); 
-  loginBox.classList.remove('hidden'); 
-});
+// DOM
+const loginBox = document.getElementById('loginBox');
+const registerBox = document.getElementById('registerBox');
+const linkShowRegister = document.getElementById('linkShowRegister');
+const linkShowLogin = document.getElementById('linkShowLogin');
 
-const params=new URLSearchParams(window.location.search);
-const codigoConvite=params.get('codigo');
+// alterna visual
+linkShowRegister.addEventListener('click', ()=>{ loginBox.classList.add('hidden'); registerBox.classList.remove('hidden'); });
+linkShowLogin.addEventListener('click', ()=>{ registerBox.classList.add('hidden'); loginBox.classList.remove('hidden'); });
+
+// preenche código se vier na URL
+const params = new URLSearchParams(window.location.search);
+const codigoConvite = params.get('codigo');
 if(codigoConvite){
   document.getElementById('inviteCodeReg').value = codigoConvite;
 }
 
-document.getElementById('btnRegister').addEventListener('click', ()=>{
-  const user=document.getElementById('userReg').value.trim();
-  const phone=document.getElementById('phoneReg').value.trim();
-  const pass=document.getElementById('passReg').value.trim();
-  const invitedBy=document.getElementById('inviteCodeReg').value.trim() || null;
+// funcoes básicas de validação simples
+function validatePhone(phone){
+  const only = phone.replace(/\D/g,'');
+  return only.length >= 8; // ajuste mínimo, aceita celulares e fixos simples
+}
 
-  if(!user||!phone||!pass){
+// cadastro
+document.getElementById('btnRegister').addEventListener('click', ()=>{
+  const user = document.getElementById('userReg').value.trim();
+  const phone = document.getElementById('phoneReg').value.trim();
+  const pass = document.getElementById('passReg').value.trim();
+  const invitedBy = document.getElementById('inviteCodeReg').value.trim() || null;
+
+  if(!user || !phone || !pass){
     showMessage('Preencha todos os campos!');
     return;
   }
-
-  const myCode="VAST-"+Date.now().toString(36).toUpperCase();
-  const data={ user, phone, pass, myCode, invitedBy };
-
+  if(!validatePhone(phone)){
+    showMessage('Telefone inválido!');
+    return;
+  }
+  // cria objeto do usuário e guarda localmente (prototipo)
+  const myCode = "VAST-"+Date.now().toString(36).toUpperCase();
+  const data = { user, phone: phone.replace(/\D/g,''), pass, myCode, invitedBy };
   localStorage.setItem('vast_userdata', JSON.stringify(data));
   showMessage('Conta criada com sucesso!', true);
-
-  setTimeout(()=>{
-    registerBox.classList.add('hidden');
-    loginBox.classList.remove('hidden');
-  },1200);
+  setTimeout(()=>{ registerBox.classList.add('hidden'); loginBox.classList.remove('hidden'); }, 900);
 });
 
+// login
 document.getElementById('btnLogin').addEventListener('click', ()=>{
-  const phone=document.getElementById('phoneLogin').value.trim();
-  const pass=document.getElementById('passLogin').value.trim();
-  const data = JSON.parse(localStorage.getItem('vast_userdata')||'null');
+  const phone = document.getElementById('phoneLogin').value.trim();
+  const pass = document.getElementById('passLogin').value.trim();
+  const data = JSON.parse(localStorage.getItem('vast_userdata') || 'null');
 
-  if(data && phone===data.phone && pass===data.pass){
+  if(!phone || !pass){ showMessage('Preencha telefone e senha!'); return; }
+  if(!data){ showMessage('Conta não encontrada!'); return; }
+
+  const normalized = phone.replace(/\D/g,'');
+  if(normalized === (data.phone||'') && pass === data.pass){
     localStorage.setItem('vast_logged','1');
     showMessage('Login realizado!', true);
-    setTimeout(()=>{ window.location.href='equipe.html'; },700);
+
+    const choice = document.getElementById('loginChoice').value;
+    setTimeout(()=>{
+      if(choice === 'site'){
+        // abre Vastbitloud com código anexado (se existir)
+        const target = 'https://sites.google.com/view/vastbitloud' + '?codigo=' + encodeURIComponent(data.myCode);
+        window.location.href = target;
+      } else {
+        // redireciona para a página de equipe (local)
+        window.location.href = 'equipe.html?codigo=' + encodeURIComponent(data.myCode);
+      }
+    },700);
   } else {
     showMessage('Telefone ou senha incorretos!');
   }
