--- a/equipe.html
+++ b/equipe.html
@@ -4,17 +4,37 @@
 <meta charset="utf-8"/>
 <meta name="viewport" content="width=device-width,initial-scale=1"/>
 <title>Minha Equipe</title>
+
 <style>
-body{margin:0;font-family:Arial,Helvetica,sans-serif;background:#0b0f17;color:#fff}
-.header{background:linear-gradient(180deg,#0f1724,#0b0f17);padding:36px 18px;text-align:center;border-bottom-left-radius:20px;border-bottom-right-radius:20px;box-shadow:0 6px 20px rgba(0,0,0,.4)}
-.container{padding:18px;max-width:720px;margin:0 auto}
-.card{background:#111722;padding:16px;border-radius:12px;box-shadow:0 3px 12px rgba(0,0,0,.3);margin-bottom:12px}
-input{width:100%;padding:10px;border-radius:8px;border:none;background:#1a2333;color:#fff;box-sizing:border-box}
-button{width:100%;padding:12px;border-radius:8px;border:none;background:#4da3ff;color:#000;cursor:pointer}
-#msgCopiado{color:#00ff7f;text-align:center;opacity:0;transition:opacity .3s;margin-top:8px}
-label.small{color:#b3b3b3;font-size:12px}
+body{margin:0;font-family:Arial;background:#0b0f17;color:#fff}
+.header{
+  background:linear-gradient(180deg,#0f1724,#0b0f17);
+  padding:36px 18px;text-align:center;
+  border-bottom-left-radius:20px;border-bottom-right-radius:20px;
+  box-shadow:0 6px 20px rgba(0,0,0,.4)
+}
+.container{padding:18px}
+.card{
+  background:#111722;padding:16px;
+  border-radius:12px;
+  box-shadow:0 3px 12px rgba(0,0,0,.3);
+  margin-bottom:12px
+}
+input{
+  width:100%;padding:10px;border-radius:8px;border:none;
+  background:#1a2333;color:#fff
+}
+button{
+  width:100%;padding:12px;border-radius:8px;border:none;
+  background:#4da3ff;color:#000;cursor:pointer
+}
+#msgCopiado{
+  color:#00ff7f;text-align:center;opacity:0;
+  transition:opacity .3s;margin-top:8px
+}
 </style>
 </head>
+
 <body>
 
 <div class="header">
@@ -24,74 +44,44 @@ label.small{color:#b3b3b3;font-size:12px}
 
 <div class="container">
 
-  <div class="card">
-    <h3 id="bonus" style="color:#4da3ff;margin:0">-</h3>
-    <div class="small" style="color:#b3b3b3">BÔNUS</div>
-  </div>
-
-  <div class="card">
-    <h3 id="invest" style="color:#4da3ff;margin:0">-</h3>
-    <div class="small" style="color:#b3b3b3">INVESTIDO</div>
-  </div>
-
-  <div class="card">
-    <h3 id="ativosCampo" style="color:#4da3ff;margin:0">-</h3>
-    <div class="small" style="color:#b3b3b3">ATIVOS</div>
-  </div>
-
-  <div class="card">
-    <h3 id="membroCampo" style="color:#4da3ff;margin:0">-</h3>
-    <div class="small" style="color:#b3b3b3">CONVIDADOS</div>
-  </div>
+  <div class="card"><h3 style="color:#4da3ff;margin:0">-</h3><div style="color:#b3b3b3">BÔNUS</div></div>
+  <div class="card"><h3 style="color:#4da3ff;margin:0">-</h3><div style="color:#b3b3b3">INVESTIDO</div></div>
+  <div class="card"><h3 style="color:#4da3ff;margin:0">-</h3><div style="color:#b3b3b3">ATIVOS</div></div>
+  <div class="card"><h3 style="color:#4da3ff;margin:0">-</h3><div style="color:#b3b3b3">CONVIDADOS</div></div>
 
   <div class="card">
     <h3 style="margin:0 0 8px">Seu Código de Convite</h3>
-    <input id="linkFinal" readonly aria-readonly="true">
+
+    <input id="linkFinal" readonly>
+
     <button id="btnCopiar">Copiar Código</button>
-    <div id="msgCopiado" role="status">Código copiado!</div>
+    <div id="msgCopiado">Código copiado!</div>
   </div>
 
 </div>
 
 <script>
-// pega dados locais
-const userData = JSON.parse(localStorage.getItem('vast_userdata') || 'null');
-if(!userData){ window.location.href = 'index.html'; throw ''; }
+const userData = JSON.parse(localStorage.getItem('vast_userdata')||'null');
+if(!userData){
+  window.location.href='index.html';
+  throw '';
+}
 
-// codigo do usuário (local ou URL)
-const params = new URLSearchParams(window.location.search);
-const codigoURL = params.get('codigo');
-const codigo = codigoURL || userData.myCode;
+const codigo = userData.myCode;
 
-// o link final deve ser o site Vastbitloud + ?codigo=...
-const finalLink = 'https://sites.google.com/view/vastbitloud' + '?codigo=' + encodeURIComponent(codigo);
-document.getElementById('linkFinal').value = finalLink;
+// link atualizado exatamente como você pediu
+document.getElementById('linkFinal').value =
+  "https://vastbitloud.github.io/ecovacs-store/?codigo=" + codigo;
 
-// copiar para área de transferência
 document.getElementById('btnCopiar').addEventListener('click', ()=>{
-  const campo = document.getElementById('linkFinal');
+  const campo=document.getElementById('linkFinal');
   campo.select();
-  try {
-    const ok = document.execCommand('copy');
-    const msg = document.getElementById('msgCopiado');
-    msg.style.opacity = 1;
-    setTimeout(()=> msg.style.opacity = 0, 1500);
-  } catch(e){
-    // fallback: criar textarea temporário
-    const ta = document.createElement('textarea');
-    ta.value = finalLink;
-    document.body.appendChild(ta);
-    ta.select();
-    document.execCommand('copy');
-    ta.remove();
-    const msg = document.getElementById('msgCopiado');
-    msg.style.opacity = 1;
-    setTimeout(()=> msg.style.opacity = 0, 1500);
-  }
+  document.execCommand('copy');
+  const msg=document.getElementById('msgCopiado');
+  msg.style.opacity=1;
+  setTimeout(()=>msg.style.opacity=0,1600);
 });
-
-// ----- exibição de dados reais NÃO implementada (apenas placeholder "-") -----
-// deixamos "-" até integração com banco de dados real (conforme solicitado)
 </script>
+
 </body>
 </html>
