--- a/index.html
+++ b/index.html
@@ -2,43 +2,92 @@
 <html lang="pt-BR">
 <head>
 <meta charset="utf-8"/>
-<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-<title>Login</title>
+<meta name="viewport" content="width=device-width,initial-scale=1"/>
+<title>Vastbitloud - Login / Cadastro</title>
 <style>
-body{margin:0;font-family:Arial;background:#0b0f17;color:#fff}
-.container{padding:20px;margin-top:40px}
-input{width:100%;padding:12px;border:none;border-radius:8px;background:#1a2333;color:#fff;margin-bottom:15px}
-button{width:100%;padding:14px;border:none;border-radius:8px;background:#4da3ff;color:#000;font-weight:bold;cursor:pointer}
+body{margin:0;padding:0;height:100%;font-family:Arial;background:#0b0f17;color:#fff;display:flex;align-items:center;justify-content:center}
+.card{background:#111722;padding:28px;width:100%;max-width:380px;border-radius:12px;box-shadow:0 8px 30px rgba(0,0,0,.45)}
+input{width:100%;padding:12px;margin:10px 0;border-radius:6px;border:none;background:#1a2333;color:#fff}
+button{width:100%;padding:12px;border-radius:6px;border:none;background:#4da3ff;color:#000;font-weight:700;cursor:pointer}
+a{color:#66aaff;display:block;margin-top:10px;cursor:pointer}
+.hidden{display:none}
 </style>
 </head>
 <body>
 
-<div class="container">
+<!-- LOGIN -->
+<div id="loginBox" class="card">
   <h2>Entrar</h2>
+  <input id="phoneLogin" type="tel" placeholder="Telefone">
+  <input id="passLogin" type="password" placeholder="Senha">
+  <button id="btnLogin">Entrar</button>
+  <a id="linkShowRegister">Criar conta</a>
+</div>
 
-  <input id="phone" placeholder="Digite seu número"/>
-
-  <button onclick="login()">Entrar</button>
+<!-- CADASTRO -->
+<div id="registerBox" class="card hidden">
+  <h2>Criar Conta</h2>
+  <input id="userReg" type="text" placeholder="Nome de Usuário">
+  <input id="phoneReg" type="tel" placeholder="Telefone">
+  <input id="passReg" type="password" placeholder="Senha">
+  <input id="inviteCodeReg" type="text" placeholder="Código de Convite (opcional)">
+  <button id="btnRegister">Cadastrar</button>
+  <a id="linkShowLogin">Já tenho conta</a>
 </div>
 
 <script>
-function login(){
-  const phone = document.getElementById("phone").value.trim();
-
-  if(phone.length < 8){
-    alert("Número inválido");
-    return;
-  }
-
-  const userData = {
-      phone: phone,
-      myCode: phone.slice(-6)  // código gerado automático
-  };
-
-  localStorage.setItem("vast_userdata", JSON.stringify(userData));
-  window.location.href = "equipe.html";  
+// Helpers
+function showMessage(msg, ok=false){
+  const d=document.createElement('div');
+  d.textContent=msg;
+  d.style.position='fixed';d.style.top='18px';d.style.left='50%';
+  d.style.transform='translateX(-50%)';d.style.padding='10px 14px';
+  d.style.background= ok? '#4CAF50' : '#ff4d4d';
+  d.style.color='#fff';d.style.borderRadius='8px';d.style.zIndex=9999;
+  document.body.appendChild(d);
+  setTimeout(()=>d.remove(),2200);
 }
-</script>
 
+// DOM refs
+const loginBox=document.getElementById('loginBox');
+const registerBox=document.getElementById('registerBox');
+const linkShowRegister=document.getElementById('linkShowRegister');
+const linkShowLogin=document.getElementById('linkShowLogin');
+linkShowRegister.addEventListener('click', ()=>{ loginBox.classList.add('hidden'); registerBox.classList.remove('hidden'); });
+linkShowLogin.addEventListener('click', ()=>{ registerBox.classList.add('hidden'); loginBox.classList.remove('hidden'); });
+
+// preencher código se vier na URL
+const params=new URLSearchParams(window.location.search);
+const codigoConvite=params.get('codigo');
+if(codigoConvite){
+  document.getElementById('inviteCodeReg').value = codigoConvite;
+}
+
+// Cadastro
+document.getElementById('btnRegister').addEventListener('click', ()=>{
+  const user=document.getElementById('userReg').value.trim();
+  const phone=document.getElementById('phoneReg').value.trim();
+  const pass=document.getElementById('passReg').value.trim();
+  const invitedBy=document.getElementById('inviteCodeReg').value.trim() || null;
+  if(!user||!phone||!pass){ showMessage('Preencha todos os campos!'); return; }
+  const myCode = "VAST-"+Date.now().toString(36).toUpperCase();
+  const data={ user, phone, pass, myCode, invitedBy };
+  localStorage.setItem('vast_userdata', JSON.stringify(data));
+  showMessage('Conta criada com sucesso!', true);
+  setTimeout(()=>{ registerBox.classList.add('hidden'); loginBox.classList.remove('hidden'); },1200);
+});
+
+// Login
+document.getElementById('btnLogin').addEventListener('click', ()=>{
+  const phone=document.getElementById('phoneLogin').value.trim();
+  const pass=document.getElementById('passLogin').value.trim();
+  const data = JSON.parse(localStorage.getItem('vast_userdata')||'null');
+  if(data && phone===data.phone && pass===data.pass){
+    localStorage.setItem('vast_logged','1');
+    showMessage('Login realizado!', true);
+    setTimeout(()=>{ window.location.href='equipe.html'; },700);
+  } else showMessage('Telefone ou senha incorretos!');
+});
+</script>
 </body>
 </html>
